--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
     "node-modules": "^1.0.1"
   }
 }
