--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "komanda",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5000/",
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
     "@emotion/react": "^11.7.1",
