--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
-    "node-modules": "^1.0.1"
+    "node-modules": "^1.0.1",
+    "socket.io": "^4.4.1"
   }
 }
