--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "komanda",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://127.0.0.1:5000",
+  "proxy":"http://127.0.0.1:5000/",
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
     "@emotion/react": "^11.7.1",
